--- a/SCSS/layout/fonts.scss
+++ b/SCSS/layout/fonts.scss
@@ -22,11 +22,11 @@
 }
 @font-face {
     font-family: "Ubuntu";
-    src: url(../../fonts/Ubuntu/Ubuntu-Medium.woff2) format('woff2');
+    src: url(../fonts/Ubuntu/Ubuntu-Medium.woff2) format('woff2');
     font-weight: 500;
 }
 @font-face {
     font-family: "Ubuntu";
-    src: url(../../fonts/Ubuntu/Ubuntu-B.woff2) format('woff2');
+    src: url(../fonts/Ubuntu/Ubuntu-B.woff2) format('woff2');
     font-weight: 700;
 }
