--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -4,6 +4,8 @@
 @import "components/first-section-we-do.scss";
 @import "components/second-section-we-best.scss";
 @import "components/third-section-reviews.scss";
+@import "components/team.scss";
+@import "components/menu.scss";
 @import "components/order.scss";
 
 @import "layout/fonts.scss";
