--- a/SCSS/components/menu.scss
+++ b/SCSS/components/menu.scss
@@ -30,6 +30,8 @@
     cursor: pointer;
     padding: 0;
     margin: 0;
+    font-size: 0.8rem;
+    line-height: 1.5rem;
 }
 /*.menu__item--bg1{
     height: 100%;
