--- a/SCSS/components/order.scss
+++ b/SCSS/components/order.scss
@@ -13,15 +13,30 @@
     @include backgroundImage;
     background-color: $colorBlack;
     background-image: url(../img/bg3.jpg);
+    padding-top: 9%;
 }
-.form__input{
+.form__input,
+.form__textaria{
     @include input;
+    width: 100%;
+}
+.form__textaria{
+    height: 122%;
 }
 .form__row{
-    margin-bottom: 15px;
+    display: flex;
+    margin-bottom: 20px;
 }
 .form__radio-list{
     list-style: none;
+    display: flex;
+    margin: 0;
+    margin-left: 6%;
+    padding-left: 0;
+    margin-top: 8%;
+}
+.form__radio-item {
+    margin-right: 43px;
 }
 .form__reset{
     background-color: transparent;
@@ -32,6 +47,11 @@ cursor: pointer;
 }
 .form__submit{
     @include btn;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    padding-left: 2.5%;
+    padding-right: 2.5%;
+    margin-right: 3%;
 }
 
 /*Стилизация чекбоксов и радиобаттонов*/
@@ -42,10 +62,15 @@ cursor: pointer;
 .form__block{
     cursor: pointer;
     position: relative;
+    flex: 1;
+    margin-right: 20px;
+    &:last-child{
+        margin-right: 0;
+    }
 }
 .form__block input[type="radio"]+.radio-indicator {
     position: absolute;
-    top: 4px;
+    top: 23px;
     left: -25px;
     width: 16px;
     height: 16px;
@@ -64,8 +89,8 @@ cursor: pointer;
 }
 .form__block input[type="checkbox"]+.checkbox-indicator {
     position: absolute;
-    top: 4px;
-    left: -25px;
+    top: 5px;
+    left: 0;
     width: 15px;
     height: 15px;
     background-color: rgba(255, 255, 255, 1);
@@ -81,8 +106,17 @@ cursor: pointer;
     height: 11px;
     background-image: url(../img/check.png);
 }
-
-
-
-
 /*Стилизация чекбоксов и радиобаттонов close*/
+.order__form{
+    display: flex;
+}
+.form__left,
+.form__right{
+    width: 45%;
+}
+.form__right {
+    margin-left: 6%;
+}
+.form__block-title--mr{
+    margin-left: 6%;
+}
