--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -7,6 +7,8 @@
 @import "components/team.scss";
 @import "components/menu.scss";
 @import "components/order.scss";
+@import "components/map.scss";
+@import "components/footer.scss";
 
 @import "layout/fonts.scss";
 
