--- a/css/style.css
+++ b/css/style.css
@@ -579,7 +579,9 @@ body {
   outline: none;
   cursor: pointer;
   padding: 0;
-  margin: 0; }
+  margin: 0;
+  font-size: 0.8rem;
+  line-height: 1.5rem; }
 
 /*.menu__item--bg1{
     height: 100%;
@@ -617,19 +619,38 @@ body {
   min-height: 650px;
   width: 100%;
   background-color: #2f3234;
-  background-image: url(../img/bg3.jpg); }
+  background-image: url(../img/bg3.jpg);
+  padding-top: 9%; }
 
-.form__input {
+.form__input,
+.form__textaria {
   border-radius: 5px;
   border: none;
   background: #fff;
-  padding: 5px 20px; }
+  padding: 5px 20px;
+  width: 100%; }
+
+.form__textaria {
+  height: 122%; }
 
 .form__row {
-  margin-bottom: 15px; }
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 20px; }
 
 .form__radio-list {
-  list-style: none; }
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 0;
+  margin-left: 6%;
+  padding-left: 0;
+  margin-top: 8%; }
+
+.form__radio-item {
+  margin-right: 43px; }
 
 .form__reset {
   background-color: transparent;
@@ -647,7 +668,12 @@ body {
   padding-top: 1%;
   padding-bottom: 4%;
   padding-left: 19%;
-  padding-right: 16%; }
+  padding-right: 16%;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  padding-left: 2.5%;
+  padding-right: 2.5%;
+  margin-right: 3%; }
   .form__submit:hover {
     background-color: #c1401e; }
 
@@ -662,11 +688,17 @@ body {
 
 .form__block {
   cursor: pointer;
-  position: relative; }
+  position: relative;
+  -webkit-box-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  margin-right: 20px; }
+  .form__block:last-child {
+    margin-right: 0; }
 
 .form__block input[type="radio"] + .radio-indicator {
   position: absolute;
-  top: 4px;
+  top: 23px;
   left: -25px;
   width: 16px;
   height: 16px;
@@ -685,8 +717,8 @@ body {
 
 .form__block input[type="checkbox"] + .checkbox-indicator {
   position: absolute;
-  top: 4px;
-  left: -25px;
+  top: 5px;
+  left: 0;
   width: 15px;
   height: 15px;
   background-color: white; }
@@ -703,6 +735,40 @@ body {
   background-image: url(../img/check.png); }
 
 /*Стилизация чекбоксов и радиобаттонов close*/
+.order__form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+
+.form__left,
+.form__right {
+  width: 45%; }
+
+.form__right {
+  margin-left: 6%; }
+
+.form__block-title--mr {
+  margin-left: 6%; }
+
+.map {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  min-height: 650px;
+  width: 100%;
+  background-color: #111114;
+  background-image: url(../img/map.jpg);
+  margin-bottom: -17px;
+  position: relative; }
+
+.footer {
+  position: absolute;
+  background-color: #2f3234;
+  left: 0;
+  top: 0;
+  min-height: 60px;
+  width: 100%; }
+
 @font-face {
   font-family: "Lifehack";
   src: url(../fonts/Lifehack-Medium.woff2) format("woff2");
