--- a/css/style.css
+++ b/css/style.css
@@ -594,7 +594,7 @@ body {
   font-size: 4.5rem;
   font-weight: 400;
   line-height: 5.3rem;
-  line-height: 64px;
+  line-height: 4rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -609,8 +609,8 @@ body {
   font-size: 0.8rem;
   font-weight: 300;
   line-height: 1.8rem;
-  font-size: 14px;
-  line-height: 24px; }
+  font-size: 0.8rem;
+  line-height: 1.5rem; }
 
 .order {
   background-size: cover;
@@ -762,12 +762,30 @@ body {
   position: relative; }
 
 .footer {
-  position: absolute;
   background-color: #2f3234;
-  left: 0;
-  top: 0;
   min-height: 60px;
   width: 100%; }
+
+.footer__address, .footer__phone {
+  text-decoration: none;
+  font-family: Ubuntu, Arial, sans-serif;
+  color: white;
+  font-size: 0.8rem;
+  font-weight: 300;
+  line-height: 1.8rem;
+  font-size: 0.8rem;
+  line-height: 1.5rem; }
+
+.footer__phone {
+  color: #f9b43b; }
+
+.footer__socials--list {
+  list-style: none;
+  padding: 0;
+  margin: 0; }
+
+.footer__socials--link {
+  text-decoration: none; }
 
 @font-face {
   font-family: "Lifehack";
