--- a/css/style.css
+++ b/css/style.css
@@ -782,10 +782,31 @@ body {
 .footer__socials--list {
   list-style: none;
   padding: 0;
-  margin: 0; }
+  margin: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
 
 .footer__socials--link {
   text-decoration: none; }
+
+.footer .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+
+.footer__contacts {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column; }
+
+.footer__left,
+.footer__right {
+  width: 50%; }
 
 @font-face {
   font-family: "Lifehack";
