--- a/SCSS/components/map.scss
+++ b/SCSS/components/map.scss
@@ -2,6 +2,6 @@
     @include backgroundImage;
     background-color: #111114;
     background-image: url(../img/map.jpg);
-    margin-bottom: -17px;
+    //margin-bottom: -17px;
     position: relative;
 }
