--- a/SCSS/layout/mixinsandvars.scss
+++ b/SCSS/layout/mixinsandvars.scss
@@ -82,5 +82,6 @@ $colorRed:#e35028;
     border: none;
     background: #fff;
     padding: 5px 20px;
+    box-sizing: border-box;
 }
 /*mixins close*/
