--- a/css/style.css
+++ b/css/style.css
@@ -628,6 +628,8 @@ body {
   border: none;
   background: #fff;
   padding: 5px 20px;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
   width: 100%; }
 
 .form__textaria {
@@ -758,11 +760,16 @@ body {
   width: 100%;
   background-color: #111114;
   background-image: url(../img/map.jpg);
-  margin-bottom: -17px;
   position: relative; }
 
 .footer {
   background-color: #2f3234;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  min-height: 650px;
+  width: 100%;
+  background-image: url(../img/bg6.jpg);
   min-height: 60px;
   width: 100%; }
 
@@ -779,6 +786,9 @@ body {
 .footer__phone {
   color: #f9b43b; }
 
+.advantages__svg-sprite--phone {
+  margin-bottom: -0.7%; }
+
 .footer__socials--list {
   list-style: none;
   padding: 0;
@@ -793,7 +803,8 @@ body {
 .footer .container {
   display: -webkit-box;
   display: -ms-flexbox;
-  display: flex; }
+  display: flex;
+  min-height: 0; }
 
 .footer__contacts {
   display: -webkit-box;
@@ -802,11 +813,34 @@ body {
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
-  flex-direction: column; }
+  flex-direction: column;
+  margin-bottom: -0.5%; }
 
 .footer__left,
 .footer__right {
   width: 50%; }
+
+.footer__right {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
+  padding-top: 3.1%; }
+
+.footer__socials--item {
+  margin-right: 20px; }
+  .footer__socials--item:hover .advantages__svg-sprite--socials {
+    fill: white; }
+  .footer__socials--item:last-child {
+    margin-right: 0; }
+
+.advantages__svg-sprite--socials {
+  fill: #595959;
+  -webkit-transition: fill  1s ease-out;
+  -o-transition: fill  1s ease-out;
+  transition: fill  1s ease-out; }
 
 @font-face {
   font-family: "Lifehack";
