--- a/css/style.css
+++ b/css/style.css
@@ -547,11 +547,8 @@ body {
 
 .menu__list {
   list-style: none;
-  -webkit-transform: rotate(-90deg);
-  -ms-transform: rotate(-90deg);
-  transform: rotate(-90deg);
   position: absolute;
-  top: 40%;
+  top: 0;
   right: 0; }
 
 .menu__title {
@@ -571,7 +568,10 @@ body {
   line-height: 5.3rem;
   font-size: 2.5rem;
   line-height: 4rem;
-  color: white; }
+  color: white;
+  -webkit-transform: rotate(-90deg);
+  -ms-transform: rotate(-90deg);
+  transform: rotate(-90deg); }
 
 .menu__btn {
   background-color: transparent;
@@ -583,11 +583,39 @@ body {
   font-size: 0.8rem;
   line-height: 1.5rem; }
 
-/*.menu__item--bg1{
-    height: 100%;
-    @include backgroundImage;
-    background-image: url(../img/ac1.jpg);
-}*/
+.menu__item--bg1 {
+  height: 100vh;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  min-height: 650px;
+  width: 100%;
+  background-image: url(../img/ac1.jpg);
+  width: 79px;
+  word-wrap: normal; }
+
+.menu__item--bg2 {
+  height: 100vh;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  min-height: 650px;
+  width: 100%;
+  background-image: url(../img/ac2.jpg);
+  width: 79px;
+  word-wrap: normal; }
+
+.menu__item--bg3 {
+  height: 100vh;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  min-height: 650px;
+  width: 100%;
+  background-image: url(../img/ac3.jpg);
+  width: 79px;
+  word-wrap: normal; }
+
 .order__title {
   font-family: Gagalin, Arial, sans-serif;
   color: #f9b43b;
