--- a/SCSS/components/first-section-we-do.scss
+++ b/SCSS/components/first-section-we-do.scss
@@ -18,7 +18,7 @@ position: relative;
     @include backgroundImage;
     background-color: #111114;
     background-image: url(../img/bg1.jpg);
-    margin-bottom: -48px;
+    margin-bottom: -3.5%;
 }
 
 .header__nav--link {
@@ -109,8 +109,8 @@ position: relative;
     background-image: url(../img/icons/arrow-scroll.svg);
     background-repeat: no-repeat;
     background-position: center center;
-    width: 30px;
-    height: 16px;
+    width: 1.875rem;
+    height: 1rem;
 }
 
 /*Сетки*/
