--- a/SCSS/components/third-section-reviews.scss
+++ b/SCSS/components/third-section-reviews.scss
@@ -34,26 +34,26 @@
 
 .reviews__hover--title {
     @include fontOrangeGagalin;
-    font-size: 14px;
+    font-size: 0.875rem;
     font-weight: 400;
-    line-height: 28px;
+    line-height: 1.75rem;
     color: $colorWhite;
 }
 
 .reviews__hover--text {
     @include fontUbuntu;
-    font-size: 14px;
+    font-size: 0.875rem;
     font-weight: 400;
-    line-height: 24px;
+    line-height: 1.5rem;
     width: 86%;
 }
 
 .reviews__hover--btn {
     @include btn;
     @include fontUbuntu;
-    font-size: 13px;
+    font-size: 0.81rem;
     font-weight: 400;
-    line-height: 30px;
+    line-height: 1.875rem;
     background-color: $colorBlack;
     padding-bottom: 1%;
     padding-left: 5%;
