--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -3,10 +3,12 @@
 
 @import "components/first-section-we-do.scss";
 @import "components/second-section-we-best.scss";
+@import "components/slider.scss";
 @import "components/third-section-reviews.scss";
 @import "components/team.scss";
 @import "components/menu.scss";
 @import "components/order.scss";
+@import "components/video.scss";
 @import "components/map.scss";
 @import "components/footer.scss";
 
