--- a/SCSS/components/first-section-we-do.scss
+++ b/SCSS/components/first-section-we-do.scss
@@ -167,6 +167,11 @@ position: relative;
 }
 .we-do__img {
     margin-left: 4%;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-image: url(../img/burgerfirst.png);
+    width: 28.18rem;
+    height: 26.5rem;
 }
 .we-do__text {
     margin-left: 3%;
