--- a/css/style.css
+++ b/css/style.css
@@ -180,7 +180,12 @@ body {
   display: flex; }
 
 .we-do__img {
-  margin-left: 4%; }
+  margin-left: 4%;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-image: url(../img/burgerfirst.png);
+  width: 28.18rem;
+  height: 26.5rem; }
 
 .we-do__text {
   margin-left: 3%;
