--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -1,6 +1,7 @@
 
 @import "layout/mixinsandvars.scss";
 
+
 @import "components/first-section-we-do.scss";
 @import "components/second-section-we-best.scss";
 @import "components/slider.scss";
@@ -13,6 +14,8 @@
 @import "components/footer.scss";
 
 @import "layout/fonts.scss";
+
+@import "layout/media.scss";
 
 
 
