--- a/css/style.css
+++ b/css/style.css
@@ -958,3 +958,66 @@ body {
   font-family: "Ubuntu";
   src: url(../fonts/Ubuntu/Ubuntu-B.woff2) format("woff2");
   font-weight: 700; }
+
+@media (max-width: 768px) {
+  .container {
+    width: 720px; }
+  .header {
+    margin-bottom: 5%; }
+  .header__nav {
+    display: none; }
+  .header__nav--btn-wrap {
+    margin-left: 66%; }
+  .we-do__content {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center; }
+  .we-do__text {
+    margin-left: 1%;
+    padding-top: 0%;
+    width: 55%; }
+  .we-do__img {
+    margin-left: 0; } }
+
+@media (min-width: 320px) and (max-width: 480px) {
+  html {
+    font-size: 14px; }
+  .container {
+    width: 460px; }
+  .header__nav--btn-wrap {
+    margin-left: 44%; }
+  /*.we-do__img {
+        width: 26rem;
+        height: 20.5rem;
+    }*/
+  .we-do__text {
+    width: 73%; } }
+
+@media (max-width: 768px) {
+  .we-best__title {
+    margin-bottom: 9%; }
+  .advantages__img--sheet {
+    margin-bottom: 7%; } }
+
+@media (min-width: 320px) and (max-width: 480px) {
+  .advantages {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column; }
+  .advantages__item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row; }
+  .advantages__title {
+    text-align: left; }
+  .advantages__text {
+    text-align: left; } }
